# RMI-Proj2

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin
devel/.private/controller_stopper/: .catkin  .rosinstall  setup.sh
devel/.private/iris_sami/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/iris_ur10e/: .catkin  .rosinstall  setup.sh
logs/rmi/: build.check.005.log.stderr  build.check.006.log.stderr  build.check.007.log.stderr  build.check.008.log.stderr  build.check.009.log.stderr  build.check.010.log.stderr  build.cmake.000.log.stderr
logs/ur_kinematics/: build.make.000.log.stderr
logs/ur_robot_driver/: build.make.000.log.stderr
src/gazebo-pkgs/: README.md
src/rmi/: CMakeLists.txt  package.xml
src/rmi/launch/: sim.launch
src/rmi/models/hanoi/: model.xacro
src/rmi/models/hanoi/hanoi_ring_1/: model.config  model.sdf  model.xacro
src/rmi/models/hanoi/hanoi_ring_2/: model.config  model.sdf  model.xacro
src/rmi/models/hanoi/hanoi_ring_3/: model.config  model.sdf  model.xacro
src/rmi/models/hanoi/hanoi_rod_support/: model.config  model.sdf  model.xacro
src/rmi/models/pillar/: model.config  pillar.sdf  pillar.sdf.xacro
src/rmi/models/table/: model.config  table.sdf  table.sdf.xacro
src/rmi/scripts/: move_arm_client.py  move_arm_server.py  param_provider.py  perception_module.cpp  planner_module.py  sim_par.py
src/rmi/srv/: GetParam.srv  GetRingPose.srv  GetRodPos.srv  MoveArm.srv
src/rmi/worlds/: hanoi.world
(+398 files in other folders)
